style: Fixed sytiling text jumps and opcaity in mobile side bar

--- a/src/app/components/nav-bar/nav-bar.scss
+++ b/src/app/components/nav-bar/nav-bar.scss
@@ -207,6 +207,7 @@
       width: tokens.nav-dimension(side-menu-width);
       height: calc(100vh - #{tokens.nav-dimension(mobile-height)});
       background-color: var(--mat-sys-tertiary);
+      opacity: 100%;
       transition: left 0.3s ease-in-out;
       padding: tokens.spacing(lg);
       box-sizing: border-box;
